# cmd/server/routes_merchant.go
@@ -17,6 +17,10 @@ func registerMerchantRoutes(r *gin.RouterGroup, h *handler.Handler) {
 	r.DELETE("/marcas/:brand_id", h.DeleteBrand)
 	r.GET("/marcas/:brand_id/sucursales", h.Branches)
 	r.POST("/marcas/:brand_id/sucursales", h.CreateBranch)
+	r.POST("/marcas/:brand_id/sucursales/cotizacion", h.QuoteBranch)
+	r.POST("/marcas/:brand_id/sucursales/altas", h.ConfirmBranch)
+	r.GET("/marcas/:brand_id/sucursales/altas/:operation_id", h.BranchOperation)
+	r.POST("/marcas/:brand_id/sucursales/altas/:operation_id/simulacion", h.SimulateBranch)
 	r.GET("/marcas/:brand_id/sucursales/:resource_id", h.Branch)
 	r.PATCH("/marcas/:brand_id/sucursales/:resource_id", h.UpdateBranch)
 	r.DELETE("/marcas/:brand_id/sucursales/:resource_id", h.DeleteBranch)
